--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "npx eleventy --serve",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "npm-run-all -p dev:*",
+        "build": "run-s build:*",
+        "dev:11ty": "eleventy --serve",
+        "dev:css": "tailwindcss -i src/css/home.css -o _site/css/tailwind.css --watch --postcss",
+        "build:11ty": "eleventy",
+        "build:css": "tailwindcss -i src/css/home.css -o _site/css/tailwind.css --postcss"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@11ty/eleventy": "^2.0.1"
+        "@11ty/eleventy": "^2.0.1",
+        "autoprefixer": "^10.4.20",
+        "npm-run-all": "^4.1.5",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.11"
     }
 }
